--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-merlot
+Otheme: jekyll-theme-merlot
 title: "Mark Hankins"
-description: "Static website created in Jekyll via github pages"
+description: "Senior DevOps and Cloud Infrastructure Engineer"
