--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-Otheme: jekyll-theme-merlot
+theme: jekyll-theme-merlot
 title: "Mark Hankins"
 description: "Senior DevOps and Cloud Infrastructure Engineer"
